commit on 1/10/24 11:11Am

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
 REACT_APP_PUSHER_APP_ID=c72271140acb93b9bc0e
-REACT_APP_BACKEND_URL=http://localhost:5001
+REACT_APP_BACKEND_URL=https://service-monitoring-server.vercel.app
